namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-opg-tasks-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-platform-app-opg-tasks-app-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "opg-deds"
    cloud-platform.justice.gov.uk/application: "opg-tasks-app"
    cloud-platform.justice.gov.uk/owner: "OPG DEDS: stuart.stach@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/opg-tasks-app"
    cloud-platform.justice.gov.uk/team-name: "task-app-admins"
    cloud-platform.justice.gov.uk/review-after: ""
